--- a/main.ipynb
+++ b/main.ipynb
@@ -1,25 +1,43 @@
-import pandas as pd
-from sklearn.feature_extraction.text import CountVectorizer
-from sklearn.metrics.pairwise import cosine_similarity
-import joblib
-
-# Load dataset
-df = pd.read_csv('movielens_100k.csv')
-
-# Fill missing values
-df = df.fillna('')
-
-# Combine relevant features
-df['combined_features'] = df['directors'] + ' ' + df['actors'] + ' ' + df['genres']
-
-# Create the count matrix
-cv = CountVectorizer()
-count_matrix = cv.fit_transform(df['combined_features'])
-
-# Calculate cosine similarity
-cosine_sim = cosine_similarity(count_matrix)
-
-# Save the model and cosine similarity matrix
-joblib.dump(df, 'movies_df.pkl')
-
-joblib.dump(cosine_sim, 'cosine_sim.pkl')
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import joblib\n",
+    "\n",
+    "# Load dataset\n",
+    "df = pd.read_csv('movielens_100k.csv')\n",
+    "\n",
+    "# Fill missing values\n",
+    "df = df.fillna('')\n",
+    "\n",
+    "# Combine relevant features\n",
+    "df['combined_features'] = df['directors'] + ' ' + df['actors'] + ' ' + df['genres']\n",
+    "\n",
+    "# Create the count matrix\n",
+    "cv = CountVectorizer()\n",
+    "count_matrix = cv.fit_transform(df['combined_features'])\n",
+    "\n",
+    "# Calculate cosine similarity\n",
+    "cosine_sim = cosine_similarity(count_matrix)\n",
+    "\n",
+    "# Save the model and cosine similarity matrix\n",
+    "joblib.dump(df, 'movies_df.pkl')\n",
+    "joblib.dump(cosine_sim, 'cosine_sim.pkl')\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
